update api added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Bigender",
         "Genderfluid",
         "Genderqueer",
-        "Polygender"
+        "Polygender",
+        "updateuser"
     ]
 }
